improve BoosterEmoji command